[package]

name = "piston2d-gfx_graphics"
version = "0.43.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["graphics", "2d", "gfx", "piston"]
description = "A Gfx 2D back-end for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/gfx_graphics.git"
homepage = "https://github.com/PistonDevelopers/gfx_graphics"
documentation = "https://docs.rs/piston2d-gfx_graphics"

[lib]

name = "gfx_graphics"


[dependencies]
rusttype = "0.2.1"
gfx = "0.16.0"
draw_state = "0.7.0"
piston-shaders_graphics2d = "0.3.1"
piston-gfx_texture = "0.26.0"
piston2d-graphics = "0.21.0"
shader_version = "0.2.1"

[dev-dependencies]
pistoncore-glutin_window = "0.38.0"
piston = "0.32.0"
find_folder = "0.3.0"
gfx_device_gl = "0.14.0"

