[package]

name = "image_iter"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
tags = []

[[bin]]

name = "image_iter"
path = "src/main.rs"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.gfx_graphics]

path = "../../"
