[package]

name = "imagetest"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
tags = []

[[bin]]

name = "image_iter"
path = "src/main.rs"

[dependencies.sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.event]

git = "https://github.com/pistondevelopers/event"

[dependencies.gfx_graphics]

path = "../../"

